[metadata]
name = lc7001
version = 1.0.5
author = Ross Tyler
author_email = 
description = Legrand LC7001 interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rtyle/lc7001
project_urls =
    Bug Tracker = https://github.com/rtyle/lc7001/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = lc7001
python_requires = >=3.8
